--- a/about.html
+++ b/about.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-124204745-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-124204745-1');
+</script>
+
     <meta charset="utf-8">
     <title>Shivank98</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
@@ -10,7 +20,7 @@
 <a href="https://github.com/pyjaipur/pyjaipur.github.io" target = "_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 <body class="page-home">
   <section>
-      <h1>Who i am ?</h1>
+      <h1>Who i Am ?</h1>
       <p> I am a Third year computer science student from JECRC Univerity, jaipur. i mostly code in
         Python and in the last two year i have tried many things like competetive programming, web
         development, data scrapping and machine learning. i like scientific and mathematical
