--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
       <p> I am a Third year computer science student from JECRC Univerity, jaipur. i mostly code in
         Python and in the last two year i have tried many things like competetive programming, web
         development, data scrapping and machine learning. i like scientific and mathematical
-        computing most.for summer 2019 i am looking for an internship in related field.</p>
+        computing most for summer 2019 i am looking for an internship in related field.</p>
         <h3> I Have been selected as Microsoft Student Partner and </h3>
-        <h3>Coursera Mentor</h3>
+        <h3>Coursera Mentor.</h3>
   </section>
 
 </body>
